# LensLM

./: .gitignore  .prettierignore  .tool-versions  CLAUDE.md  Cargo.toml  LICENSE  components.json  deny.toml  package.json  playwright.config.ts  rust-toolchain.toml  svelte.config.js  vite.config.ts  vitest-setup.ts
.github/: dependabot.yml
docs/: ci.md
lens-core/: Cargo.toml
lens-core/migrations/: 0001_init.sql  0002_notebook_personalize.sql  0003_source_soft_delete.sql  0004_source_anchor.sql  0005_enrichment.sql  0006_notebook_embedding_model.sql  0007_notebook_embedding_backend.sql  0008_source_file_hash.sql  0009_source_raw_content_hash_rename.sql  0010_source_force_js_render.sql  0011_notebook_last_activity_at.sql  0012_source_error_meta.sql  0013_chunks_fts.sql  0014_entity_graph.sql  0015_relation_types.sql  0016_entity_resolution.sql  0017_graph_eval.sql  0018_chat_messages.sql  0019_notes_chat_origin.sql  0020_notes_pinned.sql  0021_source_language.sql  0022_chat_turn_state.sql  0023_audio_overviews.sql  README.md
lens-core/src/: answer.rs  audio_overview.rs  chat.rs  chunk.rs  citation.rs  citation_source.rs  config.rs  db.rs  dialogue.rs  download.rs  embedder.rs  embedding.rs  error.rs  http.rs  ingest.rs  lib.rs  llm.rs  notebooks.rs  notes.rs  parse.rs  paths.rs  prompt.rs  relocate.rs  render.rs  storage.rs  system_check.rs  transcription.rs  tts.rs  url_normalize.rs  vector_store.rs
lens-core/src/asr/: mod.rs  registry.rs  router.rs  whisper.rs
lens-core/src/asr/cloud/: chunk.rs  deepgram.rs  mod.rs  openai_compat.rs  wav.rs
lens-core/src/embedder/: candle_backend.rs  device.rs  mod.rs  ollama.rs  registry.rs
lens-core/src/enrichment/: batching.rs  coref.rs  embedding_text.rs  map.rs  meta.rs  mod.rs  reembed.rs  relations.rs  test_util.rs  worker.rs
lens-core/src/eval/: mod.rs  runtime.rs
lens-core/src/extract/: csv.rs  docx.rs  epub.rs  json.rs  jsonl.rs  mod.rs  odt.rs  pdf.rs  rtf.rs  spreadsheet.rs  tabular_utils.rs  url.rs  xml.rs  xml_blocks.rs  yaml.rs
lens-core/src/extract/snapshots/: lens_core__extract__csv__tests__csv_block_structure.snap  lens_core__extract__docx__tests__docx_block_structure.snap  lens_core__extract__epub__tests__epub_block_structure.snap  lens_core__extract__json__tests__json_block_structure.snap  lens_core__extract__jsonl__tests__jsonl_block_structure.snap  lens_core__extract__odt__tests__odt_block_structure.snap  lens_core__extract__pdf__tests__pdf_block_structure.snap  lens_core__extract__rtf__tests__rtf_block_structure.snap  lens_core__extract__spreadsheet__tests__xlsx_block_structure.snap  lens_core__extract__url__tests__url_block_structure.snap  lens_core__extract__xml__tests__xml_block_structure.snap  lens_core__extract__yaml__tests__yaml_block_structure.snap
lens-core/src/graph/: build.rs  mod.rs  ppr.rs  tools.rs
lens-core/src/model_catalog/: bundled-catalog.json  mod.rs
lens-core/src/resolution/: mod.rs  tests.rs  worker.rs
lens-core/src/retrieval/: bm25.rs  mod.rs  rerank.rs  router.rs  rrf.rs
lens-core/src/snapshots/: lens_core__answer__tests__grounded_prompt_snapshot.snap
lens-core/src/tts/: audio.rs  catalog.rs  kokoro.rs  mod.rs  moss.rs  orpheus.rs  qwen.rs  registry.rs  sidecar.rs  snac.rs
lens-core/src/tts/cloud/: mod.rs  openai_compat.rs  ssml.rs
lens-core/tests/: answer.rs  asr_transcribe.rs  asr_whisper_model.rs  audio_anchors.rs  audio_ingest.rs  audio_overview.rs  candle_metal_parity.rs  catalog_sync_check.rs  chat.rs  citation.rs  citation_source.rs  cloud_asr.rs  cloud_tts.rs  dialogue.rs  embedding_backend_coordinate.rs  embedding_resolution.rs  enrichment_integration.rs  enrichment_step4.rs  enrichment_step5.rs  entity_graph.rs  entity_graph_expand.rs  entity_graph_tools.rs  graph_eval.rs  graph_eval_command.rs  graph_eval_runtime.rs  hybrid_retrieval.rs  ingest.rs  ingest_streaming_crash.rs  lens_core.rs  llm_provider_ollama.rs  notes.rs  ollama_embed_catalog_gated.rs  reembed_backend_switch_crash.rs  reembed_notebook.rs  relations.rs  resolution_worker.rs  retire_coordinate.rs  retire_coordinate_crash.rs  retry_ingest.rs  schema.rs  (+5 more)
lens-core/tests/common/: mod.rs
lens-core/tests/fixtures/: plain.txt  real_pandoc.odt  sample.csv  sample.md  sample.rtf  sample.xlsx  snac_parity_golden.f32  snac_parity_tokens.u32
lens-core/tests/fixtures/audio/: generate.sh  tone.aac  tone.aiff  tone.caf  tone.flac  tone.opus  tone_44100_stereo.ref16k.f32le  tone_aac.m4a  tone_alac.m4a  unsupported.xyz
lens-core/tests/fixtures/eval/: arecibo.md  coref_queries.json  espresso.md  golden_record.md  lexical_codes.md  lexical_queries.json  photosynthesis.md  pronoun_context.md  pronoun_queries.json  queries.json  rust_ownership.md  tide_prediction.md  tides.md  time_capsule.md  westinghouse.md
lens-core/tests/fixtures/eval/graph/: energy_programme_funding.md  graph_queries.json  kestrel_report.md  meridian_charter.md  nuclear_safety_systems.md  remote_energy_storage.md  research_institute_governance.md  salt_reactor_survey.md  voss_profile.md
lens-core/tests/snapshots/: ingest__office_binary_formats__ingest_epub_blocks.snap  ingest__office_binary_formats__ingest_odt_blocks.snap  ingest__office_binary_formats__ingest_rtf_blocks.snap  ingest__parser_sample_md_blocks.snap
lens-core/tests/support/: mod.rs
ofc/: Cargo.toml
sidecar/mlx-speech/: README.md  mlx_speech_sidecar.py  pyproject.toml
sidecar/qwen3-tts/: README.md  pyproject.toml  qwen3_tts_sidecar.py  test_prepare.py  test_resolve_gen_params.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  renderer-empty.json
src-tauri/frameworks/: CHECKSUMS
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  stream.rs
src-tauri/src/asr/: bridge.h  bridge.swift  mod.rs
src-tauri/src/commands/: citations.rs  config.rs  inspector.rs  mod.rs  models.rs  notebooks.rs  notes.rs  system.rs
src-tauri/src/moss/: mod.rs  resolver.rs
src-tauri/src/qwen/: coordinator.rs  mod.rs  prepare.rs  resolver.rs
src-tauri/src/render/: mod.rs
src-tauri/tests/: asset_protocol_config.rs
(+297 files in other folders)
