# LensLM root Cargo workspace.
# Decoupled backend: `lens-core` (pure headless engine) + `src-tauri` (LensLM bridge).
[workspace]
resolver = "2"
members = [
    "lens-core",
    "src-tauri",
]

# Shared metadata inherited by every member crate.
[workspace.package]
version = "0.1.0"
edition = "2024"

# Single source of truth for shared dependency versions (prevents drift across crates).
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
# `rt`/`macros` enable the async runtime + `#[tokio::test]`; `sync` for RwLock;
# `time` for the timeout APIs used by the system-check HTTP probes.
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
# Async SQLite via bundled libsqlite3-sys. `macros` is for `migrate!`/`FromRow`
# only (we use runtime-checked `query`/`query_as`, NOT `query!`, so no
# DATABASE_URL / offline cache is needed). `uuid` feature deliberately omitted —
# sqlx maps `Uuid` to BLOB for SQLite, contradicting the TEXT-key design.
sqlx = { version = "=0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }
# UUIDv7 generation only; values are stored as TEXT via `.to_string()`.
uuid = { version = "=1.18.1", features = ["v7", "serde"] }
chrono = { version = "=0.4.45", features = ["serde"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Test-only dependencies (consumed via each crate's [dev-dependencies]).
rstest = "0.26"
insta = { version = "1", features = ["json"] }
tempfile = "3"

# Shared lint policy across the workspace.
[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = true
# Optimize for speed — inference is CPU-bound and lives in lens-core.
opt-level = 3
# Unwind (not abort) so panics can be caught/logged for graceful shutdown.
strip = true
