# LensLM root Cargo workspace.
# Decoupled backend: `lens-core` (pure headless engine) + `src-tauri` (LensLM bridge).
[workspace]
resolver = "2"
members = [
    "lens-core",
    "src-tauri",
]

# Shared metadata inherited by every member crate.
[workspace.package]
version = "0.1.0"
edition = "2024"

# Single source of truth for shared dependency versions (prevents drift across crates).
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
# `rt`/`macros` enable the async runtime + `#[tokio::test]`; `sync` for RwLock;
# `time` for the timeout APIs used by the system-check HTTP probes.
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
# `CancellationToken` for the audio-ingest cancellation registry (issue #43).
tokio-util = { version = "0.7" }
# `stream!` macro for the grounded-answer orchestrator's lazy event stream (#173):
# chosen over an mpsc channel because cancellation is a separate `CancellationToken`
# knob both designs need, and `async-stream` adds lazy backpressure, prompt drop-abort,
# panic visibility, and a pure unit-testable `impl Stream` with no external task handle.
async-stream = "0.3"
# Async SQLite via bundled libsqlite3-sys. `macros` is for `migrate!`/`FromRow`
# only (we use runtime-checked `query`/`query_as`, NOT `query!`, so no
# DATABASE_URL / offline cache is needed). `uuid` feature deliberately omitted —
# sqlx maps `Uuid` to BLOB for SQLite, contradicting the TEXT-key design.
sqlx = { version = "=0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }
# UUIDv7 generation only; values are stored as TEXT via `.to_string()`.
# Bumped from =1.18.1 → =1.23.3 for M4: lancedb 0.30 → datafusion 53 requires
# uuid ^1.21. uuid 1.x is API-stable (v7 + serde present throughout 1.x).
uuid = { version = "=1.23.3", features = ["v7", "serde"] }
chrono = { version = "=0.4.45", features = ["serde"] }
# In-memory directed entity graph for #156b PPR/neighbor expansion. No ABI/compat
# lock (unpinned major); we use only Graph + NodeIndex, not the built-in page_rank
# (it lacks a personalization vector, so PPR is hand-rolled in graph/ppr.rs).
petgraph = "0.8"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# WAV (RIFF) encoding for the TTS overview audio pipeline (#190). Pure-Rust, no ABI lock.
hound = "3.5"
# Test-only dependencies (consumed via each crate's [dev-dependencies]).
rstest = "0.26"
insta = { version = "1", features = ["json"] }
tempfile = "3"

# issue #42: local Whisper ASR via whisper.cpp (whisper-rs). Pinned; the -sys
# crate builds whisper.cpp with cmake + a C/C++ compiler, so CI needs cmake/clang
# (added to .github/actions/rust-env). CPU by default; Metal is an opt-in feature.
# License: Unlicense (whisper-rs + whisper-rs-sys) — allowlisted in deny.toml.
whisper-rs = { version = "=0.16.0", default-features = false }

# issue #191 [161c]: Orpheus-3B GGUF inference via a bundled llama.cpp Rust
# binding. `llama-cpp-sys-2` builds llama.cpp with cmake + a C++ compiler (same
# toolchain whisper.cpp already requires in CI). `default-features = false` drops
# the `openmp` default (Apple clang ships no libomp — a macOS build break) and
# `common`/`android-shared-stdcxx`; we build only the core lib + samplers. Metal
# is unioned on macOS-aarch64 via the target table. Pinned for a reproducible C++
# build. MIT OR Apache-2.0 — allowlisted in deny.toml.
llama-cpp-2 = { version = "=0.1.151", default-features = false, features = ["sampler"] }

# issue #194: offline, deterministic language detection at ingest for the
# engine-aware TTS language guard. Pure-Rust, in-process, no network/model.
# Pinned per workspace convention. MIT — allowlisted in deny.toml.
whatlang = "=0.16.4"

# Shared lint policy across the workspace.
[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = true
# Optimize for speed — inference is CPU-bound and lives in lens-core.
opt-level = 3
# Unwind (not abort) so panics can be caught/logged for graceful shutdown.
strip = true
