# ARCHITECTURAL INVARIANT: this crate MUST NOT depend on tauri, any windowing/UI
# crate, or platform-specific GUI libraries. It is the pure, headless engine.
# M1 EXPLICITLY extends its I/O scope (ADR-M1-001 decision #2) to permit a
# pure-Rust outbound HTTP client (`reqwest` + `rustls-tls`) used solely for
# local runtime detection (system-check probes). This widening is deliberate;
# the no-tauri / no-windowing / no-GUI invariant above still holds in full.
[package]
name = "lens-core"
version.workspace = true
edition.workspace = true
description = "LensLM headless engine — pure Rust, no Tauri/windowing/UI dependencies; a pure-Rust outbound HTTP client (reqwest + rustls-tls) is permitted for local runtime detection."
# Internal crate, not published to crates.io (no license chosen yet).
publish = false

[lints]
workspace = true

# Retrieval-quality eval harness (M4 Phase 1, Group g). Ingests the fixture
# corpus under `tests/fixtures/eval/` into a temp LanceDB, runs canned queries,
# prints top-5 chunk ids + snippets, and computes recall@5 against a documented
# baseline floor. Downloads the nomic model on first run (network required).
[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[features]
# Exposes test-only seams on the public API (e.g. `LensEngine::set_embedder_for_test`,
# which pre-fills the embedder `OnceCell` with a caller-supplied `Arc<dyn Embedder>`
# so integration tests can inject a `CountingEmbedder` and avoid the ~130 MB model
# download). Enabled automatically for this crate's own test/bench builds via the
# `dev-dependencies` self-edge below; never enabled in a production build.
test-util = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Outbound HTTP client for local runtime detection (system-check probes).
# `rustls` (reqwest 0.13 renamed `rustls-tls` → `rustls`) keeps us off
# OpenSSL/native-tls; `default-features = false` drops the default native-tls
# stack. Pinned to the version already resolved in the lock tree (transitive via
# Tauri) so no new copy is pulled in.
reqwest = { version = "=0.13.4", default-features = false, features = [
    "json",
    "rustls",
    # `stream` exposes `Response::bytes_stream`, used by the embedding-model pull
    # (NDJSON) and the Kokoro model download to report progress as bytes arrive.
    "stream",
] }
# Stream combinators (`StreamExt::next`) for consuming `reqwest`'s byte stream.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Gunzip the committed `bundled-catalog.json.gz` offline-floor catalog in
# `model_catalog::ModelCatalog::bundled()`. flate2 is ALREADY in the lock tree
# (transitive via fastembed/lancedb), so this pulls NO new external crate — it
# just makes the already-compiled crate a direct dependency. Pinned to that
# resolved version so no second copy is added. MIT OR Apache-2.0 (deny.toml).
flate2 = "=1.1.9"

# --- M4 Phase 3 (Stage 2): unified LLM client behind the `LlmProvider` trait ---
# `genai` is the multi-provider LLM client (Anthropic/OpenAI/Gemini/Ollama/GLM/
# Ollama-Cloud/LM Studio) that replaces the three hand-rolled HTTP backends.
# Pinned to the stable 0.6.x line; 0.6.5 depends on `reqwest ^0.13` — the SAME
# major lens-core already pins (=0.13.4), so it DEDUPES (verify: `cargo tree -d
# -p reqwest`). `default-features = false` + `rustls-tls` keeps us on the
# pure-Rust rustls stack (no OpenSSL/native-tls), matching the system-check probe
# client. We inject our hardened reqwest client via `Client::builder().with_reqwest`
# (SSRF no-redirect + bounded timeouts). MIT OR Apache-2.0 — both in deny.toml.
genai = { version = "=0.6.5", default-features = false, features = ["rustls-tls"] }

# SHA256 integrity verification of the downloaded Kokoro model. Pinned to the
# version already resolved in the lock tree (transitive) so no new copy is added.
sha2 = "=0.10.9"

# --- M4 Source Grounding (Phase 2, Step 7) ---
# Rust port of trafilatura for HTML content extraction (URL sources).
# MIT OR Apache-2.0 — both in deny.toml allowlist. Default features only
# (no spider/headless-browser dependency).
rs-trafilatura = { version = "=0.2.2", default-features = false }

# URL parsing for the SSRF guard on URL-source fetches (scheme allowlist + host
# inspection before the network round-trip). Already resolved transitively via
# reqwest; pinned to that version so no second copy is added. MIT OR Apache-2.0
# — both in deny.toml allowlist.
url = "=2.5.8"

# --- M4 Phase 2.5c: structured-format extractors (JSON/JSONL/YAML/XML) ---
# YAML → serde_json::Value deserialization for the YAML extractor. Pinned
# exactly per repo convention. MIT OR Apache-2.0 — both in deny.toml allowlist.
serde-saphyr = "=0.0.28"
# Zero-copy XML DOM parser for the XML extractor. MIT OR Apache-2.0 — both in
# deny.toml allowlist. Pinned exactly per repo convention.
roxmltree = "=0.21.1"

# --- M4 Source Grounding (Phase 2, Step 6) ---
# DOCX paragraph/heading/table extraction. MIT licence — in deny.toml allowlist.
# Pinned exactly to avoid future breaking changes in a crate still at 0.x.
# `default-features = false` drops the optional `image` dep (not needed for extraction).
docx-rs = { version = "=0.4.20", default-features = false }

# --- M4 Source Grounding (Phase 2, Step 5) ---
# PDF text + per-segment bounding-box extraction. `pdfium-render` is a pure-Rust
# binding that DYNAMICALLY LOADS the prebuilt libpdfium dylib at runtime
# (Pdfium::bind_to_library / bind_to_system_library) — it does NOT build or pull
# the GPL `pdfium` C++ sources, and links no `pdfium` crate. MIT OR Apache-2.0,
# both in deny.toml allowlist. `default-features = false` drops `image_latest`
# (the heavy `image` crate, only needed for page rasterization — we extract text
# only). `thread_safe` adds NO new deps (feature = []) but is REQUIRED: it makes
# `Pdfium` `Send + Sync` (so it can live behind the process-global `OnceLock`
# binding) and serializes all FFI calls behind pdfium-render's internal lock, so
# parallel `cargo test` threads sharing the one global binding are safe.
# `pdfium_latest` selects the newest API-version surface the binding exposes;
# our vendored binary is bblanchon chromium/7906 (>= the binding's pinned 7763),
# which is API-compatible for the text/page/object calls we use.
pdfium-render = { version = "=0.9.2", default-features = false, features = [
    "pdfium_latest",
    "thread_safe",
] }

# --- M4 Source Grounding (Phase 1) ---
# Local embeddings: nomic-embed-text-v1.5 (768d) via ONNX. fastembed transitively
# pins `ort = =2.0.0-rc.12` (download-binaries default → onnxruntime bundled, no
# system install). This is the FIRST `ort` in the workspace (Kokoro is download-only).
fastembed = "5.17.2"
# Embedded vector store. lancedb 0.30.0 pins Arrow 58 — every arrow crate below
# MUST match that major or the binary hits an ABI break (verify: `cargo tree -d`).
lancedb = "0.30.0"
arrow-array = "59"
arrow-schema = "58"
# Layout-aware Markdown parsing → bounded blocks. 0.13.4 fixes a TightParagraph
# panic that fires on arbitrary user Markdown.
pulldown-cmark = "0.13.4"
# HF tokenizer (the SAME impl fastembed uses internally) for 512/128 chunk sizing.
tokenizers = "0.22"
# async fn in the VectorStore trait.
async-trait = "0.1"
# Temp dir for the `eval` binary's throwaway LanceDB corpus. (Also a dev-dep for
# the integration tests; declaring it here makes it available to the bin target.)
tempfile = { workspace = true }

[dev-dependencies]
# Self-edge: enables the `test-util` feature for this crate's own test/bench
# builds (unit + integration), so `LensEngine::set_embedder_for_test` is in scope
# for `tests/ingest.rs` without ever turning the feature on for production builds.
lens-core = { path = ".", features = ["test-util"] }
rstest = { workspace = true }
insta = { workspace = true }
# Temp-dir DBs for integration tests that need real on-disk files / concurrency.
tempfile = { workspace = true }
# In-process HTTP mock server for the LLM/embedding runtime probe tests.
wiremock = "0.6"
# Direct LanceDB reads in the ingest integration tests (orphan-vector assertions
# in the re-ingest/wipe test). Pinned to the same versions the lib already
# resolves so no second copy is pulled into the lock tree.
lancedb = "0.30.0"
# Pure-Rust PDF writer — generates the tiny text-layer PDF fixture IN-TEST (Step 5
# TDD) so no binary fixture is committed. Dev-only; never in production builds.
# MIT-licensed (deny.toml allowlist).
printpdf = "=0.7.0"
arrow-array = "59"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# Tokenizer download fallback for tokenizer-dependent tests when offline cache
# is absent (same version the lib resolves).
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
