# ARCHITECTURAL INVARIANT: this crate MUST NOT depend on tauri, any windowing/UI
# crate, or platform-specific GUI libraries. It is the pure, headless engine.
# M1 EXPLICITLY extends its I/O scope (ADR-M1-001 decision #2) to permit a
# pure-Rust outbound HTTP client (`reqwest` + `rustls-tls`) used solely for
# local runtime detection (system-check probes). This widening is deliberate;
# the no-tauri / no-windowing / no-GUI invariant above still holds in full.
[package]
name = "lens-core"
version.workspace = true
edition.workspace = true
description = "LensLM headless engine — pure Rust, no Tauri/windowing/UI dependencies; a pure-Rust outbound HTTP client (reqwest + rustls-tls) is permitted for local runtime detection."
# Internal crate, not published to crates.io (no license chosen yet).
publish = false

[lints]
workspace = true

# Retrieval-quality eval harness (M4 Phase 1, Group g). Ingests the fixture
# corpus under `tests/fixtures/eval/` into a temp LanceDB, runs canned queries,
# prints top-5 chunk ids + snippets, and computes recall@5 against a documented
# baseline floor. Downloads the nomic model on first run (network required).
[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[features]
# Exposes test-only seams on the public API (e.g. `LensEngine::set_embedder_for_test`,
# which pre-fills the embedder `OnceCell` with a caller-supplied `Arc<dyn Embedder>`
# so integration tests can inject a `CountingEmbedder` and avoid the ~130 MB model
# download). Enabled automatically for this crate's own test/bench builds via the
# `dev-dependencies` self-edge below; never enabled in a production build.
test-util = []

# issue #91: the candle + Metal (Apple GPU) embedding backend.
# Pulls candle-core/candle-nn/candle-transformers + hf-hub, all gated to
# aarch64-apple-darwin in the target table below (they only build there). OFF by
# default, so non-macOS / non-aarch64 CI never compiles candle. The GPU-offload
# path proven live after the ORT-CoreML-EP path was measured dead (see memory
# issue-91-native-ml-seam + .omc HANDOFF). MUST stay aarch64-apple-darwin only.
native-ml-metal = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
]

# issue #91: the NVIDIA-CUDA GPU embedding path for Win/Linux — INTERFACE ONLY.
# Deliberately pulls NO dependencies: it activates the reserved `CudaAccelerator`
# seam + `Compute::Cuda` routing so the polymorphic device policy is proven to
# accommodate CUDA, but a job resolving to CUDA still falls back to fastembed-CPU
# until a candle-CUDA backend is implemented. The future implementation adds the
# candle deps with their `cuda` feature (needs the CUDA toolkit at build time,
# NVIDIA-only) behind THIS flag. MUST NOT be enabled together with
# `native-ml-metal` (different platforms).
native-ml-cuda = []

# issue #42: local Whisper ASR backend (whisper.cpp via whisper-rs). Default-ON
# so the Linux `rust-clippy --all-targets` compile canary proves the C++/cmake
# build stays green cross-platform. Metal stays OFF pending the Unit-0 spike.
local-whisper = ["dep:whisper-rs"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Outbound HTTP client for local runtime detection (system-check probes).
# `rustls` (reqwest 0.13 renamed `rustls-tls` → `rustls`) keeps us off
# OpenSSL/native-tls; `default-features = false` drops the default native-tls
# stack. Pinned to the version already resolved in the lock tree (transitive via
# Tauri) so no new copy is pulled in.
reqwest = { version = "=0.13.4", default-features = false, features = [
    "json",
    "rustls",
    # `stream` exposes `Response::bytes_stream`, used by the embedding-model pull
    # (NDJSON) and the Kokoro model download to report progress as bytes arrive.
    "stream",
] }
# Stream combinators (`StreamExt::next`) for consuming `reqwest`'s byte stream.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Gunzip the committed `bundled-catalog.json.gz` offline-floor catalog in
# `model_catalog::ModelCatalog::bundled()`. flate2 is ALREADY in the lock tree
# (transitive via fastembed/lancedb), so this pulls NO new external crate — it
# just makes the already-compiled crate a direct dependency. Pinned to that
# resolved version so no second copy is added. MIT OR Apache-2.0 (deny.toml).
flate2 = "=1.1.9"

# --- M12 issue #41: audio decode + resample to 16kHz mono PCM ---
# Pure-Rust, in-RAM media decode (no C toolchain, no sidecar, no temp files).
# `features = ["all"]` enables the codec/container decoders that are OFF by
# Symphonia's cargo defaults — mp3/aac/isomp4/alac/caf/aiff — alongside the
# always-on wav/flac/ogg/vorbis. Opus is NOT decodable in 0.5.5 (roadmap only)
# and maps to `UnsupportedMediaCodec`. MPL-2.0 — in deny.toml allowlist.
symphonia = { version = "=0.5.5", features = ["all"] }
# High-quality sinc resampler (arbitrary-rate → 16kHz). Pinned to the 0.16.x
# line for the stable `SincFixedIn` + planar `Vec<Vec<f32>>` API (rubato 3.0.0
# REMOVED `SincFixedIn` in favour of an `audioadapter` surface that has since
# drifted to 4.0.0; the spec explicitly sanctions this 0.16 fallback to avoid
# the moving-target adapter API). The sinc filter retains state across blocks,
# so windowed output equals whole-buffer output (issue #41 D2/D8).
# MIT — in deny.toml allowlist.
rubato = "=0.16.2"

# issue #42: local Whisper ASR (whisper.cpp). Optional — pulled in only by the
# `local-whisper` feature. Not target-gated: it builds cross-platform (CPU).
whisper-rs = { workspace = true, optional = true }

# --- M4 Phase 3 (Stage 2): unified LLM client behind the `LlmProvider` trait ---
# `genai` is the multi-provider LLM client (Anthropic/OpenAI/Gemini/Ollama/GLM/
# Ollama-Cloud/LM Studio) that replaces the three hand-rolled HTTP backends.
# Pinned to the stable 0.6.x line; 0.6.5 depends on `reqwest ^0.13` — the SAME
# major lens-core already pins (=0.13.4), so it DEDUPES (verify: `cargo tree -d
# -p reqwest`). `default-features = false` + `rustls-tls` keeps us on the
# pure-Rust rustls stack (no OpenSSL/native-tls), matching the system-check probe
# client. We inject our hardened reqwest client via `Client::builder().with_reqwest`
# (SSRF no-redirect + bounded timeouts). MIT OR Apache-2.0 — both in deny.toml.
genai = { version = "=0.6.5", default-features = false, features = ["rustls-tls"] }

# SHA256 integrity verification of the downloaded Kokoro model. Pinned to the
# version already resolved in the lock tree (transitive) so no new copy is added.
sha2 = "=0.10.9"

# --- M4 Source Grounding (Phase 2, Step 7) ---
# Rust port of trafilatura for HTML content extraction (URL sources).
# MIT OR Apache-2.0 — both in deny.toml allowlist. Default features only
# (no spider/headless-browser dependency).
rs-trafilatura = { version = "=0.2.2", default-features = false }

# URL parsing for the SSRF guard on URL-source fetches (scheme allowlist + host
# inspection before the network round-trip). Already resolved transitively via
# reqwest; pinned to that version so no second copy is added. MIT OR Apache-2.0
# — both in deny.toml allowlist.
url = "=2.5.8"

# --- M4 Phase 2.5c: structured-format extractors (JSON/JSONL/YAML/XML) ---
# YAML → serde_json::Value deserialization for the YAML extractor. Pinned
# exactly per repo convention. MIT OR Apache-2.0 — both in deny.toml allowlist.
serde-saphyr = "=0.0.28"
# Zero-copy XML DOM parser for the XML extractor. MIT OR Apache-2.0 — both in
# deny.toml allowlist. Pinned exactly per repo convention.
roxmltree = "=0.21.1"

# --- M4 issue #77: RTF / ODT / EPUB office-binary extractors ---
# RTF paragraph extraction. `default-features = false` drops the optional
# `jsbindings` (WASM JSValue) feature not needed for native extraction.
# MIT — deny.toml allowlist. Pinned exactly per repo convention.
rtf-parser = { version = "=0.4.3", default-features = false }
# ODF/EPUB ZIP container reader (ODT `content.xml`, EPUB structure). zip 0.6.6 is
# ALREADY resolved transitively via docx-rs, so pinning to that version pulls NO
# new copy. MIT — deny.toml allowlist.
zip = { version = "=0.6.6", default-features = false, features = ["deflate"] }
# XHTML/XML streaming parser for ODT `content.xml` and EPUB XHTML spine entries.
# A NEW direct dep (existing transitive versions resolve independently). MIT —
# deny.toml allowlist. Pinned exactly per repo convention.
quick-xml = { version = "=0.41.0", default-features = false }
# EPUB2/3 reader for the EPUB extractor. `default-features = false` drops the
# optional `write`/`prelude` features not needed for read-only extraction;
# `threadsafe` is REQUIRED so the parsed Epub is Send + Sync (the extractor lives
# behind `Box<dyn Extractor>`). Apache-2.0 — deny.toml allowlist. Pinned exactly.
#
# KNOWN TRANSITIVE SIDE EFFECT: rbook pulls its own `zip 8.6.0`, which enables
# `flate2`'s `zlib-rs` backend. Via Cargo feature unification this switches the
# DEFLATE backend (miniz_oxide → zlib-rs) for ALL flate2 consumers in the
# workspace (lance, reqwest, docx-rs). zlib-rs is a production-grade pure-Rust
# backend and the full test suite passes; documented here so a future maintainer
# isn't surprised by the Cargo.lock backend change.
rbook = { version = "=0.7.9", default-features = false, features = ["threadsafe"] }

# --- M4 issue #76: tabular-format extractors (XLSX/XLS/CSV) ---
# Excel/OpenDocument spreadsheet reader (XLSX + XLS) via the shared
# `spreadsheet.rs` extractor. Read-only; opened from in-memory bytes via
# `open_workbook_auto_from_rs(Cursor::new(raw))`. The cell enum is `Data`
# (variants Int/Float/String/Bool/DateTime(ExcelDateTime)/DateTimeIso(String)/
# DurationIso(String)/Error/Empty). MIT — deny.toml allowlist. Pinned exactly.
calamine = "=0.35.0"
# CSV reader (comma-delimited, RFC-4180 quoting) for the `csv.rs` extractor.
# `ReaderBuilder::default()` does NOT strip a leading UTF-8 BOM; the extractor
# strips it manually. MIT OR Unlicense — MIT in deny.toml allowlist. Pinned.
csv = "=1.4.0"

# --- M4 Source Grounding (Phase 2, Step 6) ---
# DOCX paragraph/heading/table extraction. MIT licence — in deny.toml allowlist.
# Pinned exactly to avoid future breaking changes in a crate still at 0.x.
# `default-features = false` drops the optional `image` dep (not needed for extraction).
docx-rs = { version = "=0.4.20", default-features = false }

# --- M4 Source Grounding (Phase 2, Step 5) ---
# PDF text + per-segment bounding-box extraction. `pdfium-render` is a pure-Rust
# binding that DYNAMICALLY LOADS the prebuilt libpdfium dylib at runtime
# (Pdfium::bind_to_library / bind_to_system_library) — it does NOT build or pull
# the GPL `pdfium` C++ sources, and links no `pdfium` crate. MIT OR Apache-2.0,
# both in deny.toml allowlist. `default-features = false` drops `image_latest`
# (the heavy `image` crate, only needed for page rasterization — we extract text
# only). `thread_safe` adds NO new deps (feature = []) but is REQUIRED: it makes
# `Pdfium` `Send + Sync` (so it can live behind the process-global `OnceLock`
# binding) and serializes all FFI calls behind pdfium-render's internal lock, so
# parallel `cargo test` threads sharing the one global binding are safe.
# `pdfium_latest` selects the newest API-version surface the binding exposes;
# our vendored binary is bblanchon chromium/7906 (>= the binding's pinned 7763),
# which is API-compatible for the text/page/object calls we use.
pdfium-render = { version = "=0.9.2", default-features = false, features = [
    "pdfium_latest",
    "thread_safe",
] }

# --- M4 Source Grounding (Phase 1) ---
# Local embeddings: nomic-embed-text-v1.5 (768d) via ONNX. fastembed transitively
# pins `ort = =2.0.0-rc.12` (download-binaries default → onnxruntime bundled, no
# system install). This is the FIRST `ort` in the workspace (Kokoro is download-only).
fastembed = "5.17.2"
# Embedded vector store. lancedb 0.30.0 pins Arrow 58 — every arrow crate below
# MUST match that major or the binary hits an ABI break (verify: `cargo tree -d`).
lancedb = "0.30.0"
arrow-array = "58"
arrow-schema = "58"
# Layout-aware Markdown parsing → bounded blocks. 0.13.4 fixes a TightParagraph
# panic that fires on arbitrary user Markdown.
pulldown-cmark = "0.13.4"
# HF tokenizer (the SAME impl fastembed uses internally) for 512/128 chunk sizing.
tokenizers = "0.22"
# async fn in the VectorStore trait.
async-trait = "0.1"
# Temp dir for the `eval` binary's throwaway LanceDB corpus. (Also a dev-dep for
# the integration tests; declaring it here makes it available to the bin target.)
tempfile = { workspace = true }

# --- issue #91: candle + Metal embedding backend ---
# Gated to aarch64-apple-darwin: candle's `metal` feature pulls Apple's Metal
# Shading Language kernels (objc2-metal) that ONLY build on Apple Silicon macOS,
# and the whole point (GPU offload) is Apple-Silicon-specific. All four crates are
# `optional` and pulled in ONLY by the `native-ml-metal` feature (off by default),
# so a default build on this target does NOT compile them either. candle 0.11.0
# (2026-06-26). Do NOT enable `flash-attn` (CUDA-only, will not compile on Metal).
# Weights loaded as DType::F32 (fp16 on M-series is only ~1.1x faster but breaks
# cross-engine cosine parity — see memory issue-91-native-ml-seam). MIT OR
# Apache-2.0 (candle, hf-hub) — both in deny.toml allowlist.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { version = "=0.11.0", features = ["metal"], optional = true }
candle-nn = { version = "=0.11.0", features = ["metal"], optional = true }
candle-transformers = { version = "=0.11.0", features = ["metal"], optional = true }
# HF weight/config/tokenizer fetch for the candle backend. hf-hub 0.5.0 is ALREADY
# resolved in the lock tree (transitive via fastembed), so this pulls NO new copy —
# it just promotes it to a direct, feature-gated dependency for the download path.
hf-hub = { version = "=0.5.0", optional = true }

[dev-dependencies]
# Self-edge: enables the `test-util` feature for this crate's own test/bench
# builds (unit + integration), so `LensEngine::set_embedder_for_test` is in scope
# for `tests/ingest.rs` without ever turning the feature on for production builds.
lens-core = { path = ".", features = ["test-util"] }
rstest = { workspace = true }
insta = { workspace = true }
# Temp-dir DBs for integration tests that need real on-disk files / concurrency.
tempfile = { workspace = true }
# In-process HTTP mock server for the LLM/embedding runtime probe tests.
wiremock = "0.6"
# Direct LanceDB reads in the ingest integration tests (orphan-vector assertions
# in the re-ingest/wipe test). Pinned to the same versions the lib already
# resolves so no second copy is pulled into the lock tree.
lancedb = "0.30.0"
# Pure-Rust PDF writer — generates the tiny text-layer PDF fixture IN-TEST (Step 5
# TDD) so no binary fixture is committed. Dev-only; never in production builds.
# MIT-licensed (deny.toml allowlist).
printpdf = "=0.7.0"
# Pure-Rust XLSX writer — generates the `sample.xlsx` test fixture in a #[test]
# (see `extract::spreadsheet` tests). calamine is READ-ONLY so it cannot write
# fixtures. Dev-only; never in production builds. MIT OR Apache-2.0.
rust_xlsxwriter = "=0.92.0"
arrow-array = "58"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# Tokenizer download fallback for tokenizer-dependent tests when offline cache
# is absent (same version the lib resolves).
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
