[package]
name = "lenslm"
version.workspace = true
edition.workspace = true
description = "LensLM desktop shell — Tauri v2 IPC bridge over lens-core."
# Application binary, not published to crates.io (no license chosen yet).
publish = false

# Produce a binary named "LensLM" (shown in logs and the macOS app/menu name).
[[bin]]
name = "LensLM"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lens-core = { path = "../lens-core" }
# `tauri::ipc::Channel` and `app.path()` are available without extra features.
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Block on async engine init inside the synchronous `.setup` closure.
tokio = { workspace = true }
# Native file picker for the onboarding "Add sources" step (Tauri 2.x plugin).
tauri-plugin-dialog = "2"

[dev-dependencies]
# The `test` feature (mock runtime) is unioned in only for test builds.
tauri = { version = "2", features = ["test"] }
# Temp dirs for the recent-documents scan test.
tempfile = { workspace = true }
# Inspector-command test seeds chunk + embedding_index rows via raw SQL on the
# engine's pool (the embed worker is stubbed under `for_test`, so ingest yields
# none); ids/timestamps mint via uuid/chrono — test-only deps.
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
